# ATLASControl

./: README.md
ATLAS/devel/: .catkin  .rosinstall  setup.sh
SRC Tasks/: task1.py
atlas_control/: CMakeLists.txt  package.xml
atlas_control/worlds/: myworld.world
atlas_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
atlas_interface/examples/: example.cpp~  example.launch  example.launch~
atlas_interface/launch/: example.launch~
atlas_interface/src/: atlas_interface.cpp  control.cpp  demo.py  example.cpp
control_mode_switch/: demo.py  demo.py~  mainpage.dox  manifest.xml
joint_animation_tutorial/: manifest.xml
moveit/: .setup_assistant  CMakeLists.txt
moveit/config/: atlas.srdf
moveit/launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  moveit.rviz  run_benchmark_ompl.launch  setup_assistant.launch  warehouse.launch
ros/Model_rescale/: CupVer3.STL  Example_rescale_code.txt
ros/Moveit/: package.xml
ros/joint_animation_tutorial/: mainpage.dox
ros/world_create_tutorial/: manifest.xml
val_moveit/: .setup_assistant  CMakeLists.txt  package.xml
val_moveit/config/: atlas.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
val_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  (+7 more)
val_trac_ik/: CMakeLists.txt  package.xml
val_trac_ik/launch/: trac_ik.launch
val_trac_ik/src/: trac_ik.cpp
world_create_tutorial/: mainpage.dox
(+18 files in other folders)
